--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <p id="g">NAAC Grade A++ with CGPA 3.71</p>
          </div>
          <div class="image">
-         <img src="picture/aazadi.png" alt="aazadilogo" id="img1">
-         <img src="picture/college.png" alt="Ramanujan college logo" id="img2">
-         <img src="picture/g20.png" alt="G20 logo" id="img3">
+         <img src="aazadi.png" alt="aazadilogo" id="img1">
+         <img src="college.png" alt="Ramanujan college logo" id="img2">
+         <img src="g20.png" alt="G20 logo" id="img3">
          </div>
          <div class="cname">
             <h1>रामानुजन महाविद्यालय</h1>
@@ -48,19 +48,19 @@
     <div class="department">
         <div class="dept1">
             <h3>Department of Applied Psychology</h3>
-            <a href="https://ramanujancollege.ac.in/departments/department-of-applied-psychology/"><img src="picture/psy.jpg" alt=""></a>
+            <a href="https://ramanujancollege.ac.in/departments/department-of-applied-psychology/"><img src="psy.jpg" alt=""></a>
         </div>
         <div class="dept2">
             <h3>Department of Computer Science</h3>
-            <a href="https://ramanujancollege.ac.in/departments/department-of-computer-science/"><img src="picture/comptersc.jpg" alt=""></a>
+            <a href="https://ramanujancollege.ac.in/departments/department-of-computer-science/"><img src="comptersc.jpg" alt=""></a>
         </div>
         <div class="dept2">
             <h3>Department of Economics</h3>
-            <a href="https://ramanujancollege.ac.in/departments/department-of-economics/"><img src="picture/eco.jpg" alt=""></a>
+            <a href="https://ramanujancollege.ac.in/departments/department-of-economics/"><img src="eco.jpg" alt=""></a>
         </div>
         <div class="dept2">
             <h3>Department of English</h3>
-            <a href="https://ramanujancollege.ac.in/departments/department-of-english/"><img src="picture/eng.jpg" alt=""></a>
+            <a href="https://ramanujancollege.ac.in/departments/department-of-english/"><img src="eng.jpg" alt=""></a>
         </div>
     </div>
     <div class="department">
@@ -70,33 +70,33 @@
         </div>
         <div class="dept2">
             <h3>Department of Commerce</h3>
-            <a href="https://ramanujancollege.ac.in/departments/department-of-commerce/"><img src="picture/commerce.jpg" alt=""></a>
+            <a href="https://ramanujancollege.ac.in/departments/department-of-commerce/"><img src="commerce.jpg" alt=""></a>
         </div>
         <div class="dept2">
             <h3>Department of Punjabi</h3>
-            <a href="https://ramanujancollege.ac.in/departments/department-of-punjabi/"><img src="picture/punjabi.jpg" alt=""></a>
+            <a href="https://ramanujancollege.ac.in/departments/department-of-punjabi/"><img src="punjabi.jpg" alt=""></a>
         </div>
         <div class="dept2">
             <h3>Department of Hindi</h3>
-            <a href="https://ramanujancollege.ac.in/departments/department-of-hindi/"><img src="picture/hindi.jpg" alt=""></a>
+            <a href="https://ramanujancollege.ac.in/departments/department-of-hindi/"><img src="hindi.jpg" alt=""></a>
         </div>
     </div>
     <div class="department">
         <div class="dept1">
             <h3>Department of History</h3>
-            <a href="https://ramanujancollege.ac.in/departments/department-of-history/"><img src="picture/his.jpg" alt=""></a>
+            <a href="https://ramanujancollege.ac.in/departments/department-of-history/"><img src="his.jpg" alt=""></a>
         </div>
         <div class="dept2">
             <h3>Department of Management Studies</h3>
-            <a href="https://ramanujancollege.ac.in/departments/department-of-management-studies/"><img src="picture/management.png" alt=""></a>
+            <a href="https://ramanujancollege.ac.in/departments/department-of-management-studies/"><img src="management.png" alt=""></a>
         </div>
         <div class="dept2">
             <h3>Department of Mathematics</h3>
-            <a href="https://ramanujancollege.ac.in/departments/department-of-mathematics/"><img src="picture/math.jpg" alt=""></a>
+            <a href="https://ramanujancollege.ac.in/departments/department-of-mathematics/"><img src="math.jpg" alt=""></a>
         </div>
         <div class="dept2">
             <h3>Department of Voccation</h3>
-            <a href="https://ramanujancollege.ac.in/departments/department-of-vocation/"><img src="picture/voccation.png" alt=""></a>
+            <a href="https://ramanujancollege.ac.in/departments/department-of-vocation/"><img src="voccation.png" alt=""></a>
         </div>
     </div>
     <div class="ttophead2">
