--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="department">
         <div class="dept1">
             <h3>Department of Environmental Studies</h3>
-            <a href="Department_of_Environmental_Studies.original.jpg" alt=""></a>
+            <a href="Department_of_Environmental_Studies.original.jpg" <img src="Department_of_Environmental_Studies.original.jpg" alt=""></a>
         </div>
         <div class="dept2">
             <h3>Department of Commerce</h3>
